# AnrCanary

./: build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/: WeChatNativeDepend.gradle
gradle/wrapper/: gradle-wrapper.properties
matrix-android-commons/: CMakeLists.txt  build.gradle
matrix-android-commons/src/main/: AndroidManifest.xml
matrix-android-commons/src/main/cpp/: CMakeLists.txt  matrix_android_commons.cpp
matrix-android-lib/: build.gradle
matrix-backtrace/: build.gradle
matrix-backtrace/src/main/cpp/: CMakeLists.txt  matrix_backtrace.cpp
matrix-trace-canary/: CMakeLists.txt  build.gradle
matrix-trace-canary/src/androidTest/java/com/tencent/matrix_trace_canary/: ExampleInstrumentedTest.java
matrix-trace-canary/src/main/: AndroidManifest.xml
matrix-trace-canary/src/main/cpp/: CMakeLists.txt  MatrixTracer.cc  matrix_trace_canary.cpp
matrix-trace-canary/src/main/java/com/tencent/matrix/trace/config/: TraceConfig.java
matrix-trace-canary/src/main/java/com/tencent/matrix/trace/constants/: Constants.java
matrix-trace-canary/src/main/java/com/tencent/matrix/trace/core/: LooperMonitor.java
matrix-trace-canary/src/main/java/com/tencent/matrix/trace/tracer/: LooperAnrTracer.java  SignalAnrTracer.java
matrix-trace-canary/src/main/java/com/tencent/matrix/trace/util/: FileUtil.java
matrix-trace-canary/src/main/java/com/tencent/matrix_trace_canary/: NativeLib.java
matrix-trace-canary/src/test/java/com/tencent/matrix_trace_canary/: ExampleUnitTest.java
nativelib/: build.gradle
(+22 files in other folders)
